--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "build-css": "sass src/styles/styles.scss src/dist/styles.css",
-  "watch-css": "sass --watch src/styles/styles.scss:src/dist/styles.css"
-}
-,
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "build-css": "sass src/styles/styles.scss src/dist/styles.css",
+    "watch-css": "sass --watch src/styles/styles.scss:src/dist/styles.css"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
